--- a/public/css/main.css
+++ b/public/css/main.css
@@ -195,14 +195,27 @@ header .social li:first-child{
 
 
 /*		Hero section 		*/
-
 .hero{
-	display: block;
-	position: relative;
-	width: 100%;
-	height: 560px;
-	background: url('../img/hero.jpg') no-repeat fixed center center;
-	background-size: cover;
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 560px;
+  background-size: cover;
+}
+@media screen and (max-width: 500px) {
+  .hero {
+    background: url('../img/hero-small.jpg') no-repeat fixed center center;
+  }
+}
+@media screen and (min-width: 501px) and (max-width: 1500px) {
+  .hero {
+    background: url('../img/hero-medium.jpg') no-repeat fixed center center;
+  }
+}
+@media screen and (min-width: 2000px) {
+  .hero {
+    background: url('../img/hero.jpg') no-repeat fixed center center;
+  }
 }
 
 .hero .caption{
